Removed the target=blank param on the MetroClick button so it will open in the same tab

--- a/express_supa/views/dashboard.ejs
+++ b/express_supa/views/dashboard.ejs
@@ -90,7 +90,7 @@
 <!-- Always visible on page load -->
 <div id="alwaysVisibleLinks" class="mb-3">
   <a id="wallboardLink" href="wallboard" target="_blank" class="btn btn-warning">WB demo</a>
-  <a id="metroclickLink" href="metroclick" target="_blank" class="btn btn-info">MC demo</a>
+  <a id="metroclickLink" href="metroclick" class="btn btn-info">MC demo</a>
 </div>
 
 </div>
